test_output.txt
   Compiling shiplog-schema v0.2.1 (H:\Code\Rust\shiplog\crates\shiplog-schema)
   Compiling git2 v0.20.4
   Compiling shiplog-ports v0.2.1 (H:\Code\Rust\shiplog\crates\shiplog-ports)
   Compiling shiplog-ingest-git v0.2.1 (H:\Code\Rust\shiplog\crates\shiplog-ingest-git)
error[E0277]: `git2::Repository` doesn't implement `std::fmt::Debug`
    --> crates\shiplog-ingest-git\src\lib.rs:864:40
     |
 864 |         let err = ingestor.open_repo().unwrap_err();
     |                                        ^^^^^^^^^^ the trait `std::fmt::Debug` is not implemented for `git2::Repository`
     |
note: required by a bound in `std::result::Result::<T, E>::unwrap_err`
    --> C:\Users\steven\.rustup\toolchains\1.92-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\result.rs:1326:12
     |
1324 |     pub fn unwrap_err(self) -> E
     |            ---------- required by a bound in this associated function
1325 |     where
1326 |         T: fmt::Debug,
     |            ^^^^^^^^^^ required by this bound in `Result::<T, E>::unwrap_err`
help: consider removing this method call, as the receiver has type `LocalGitIngestor` and `LocalGitIngestor: std::fmt::Debug` trivially holds
     |
 864 -         let err = ingestor.open_repo().unwrap_err();
 864 +         let err = ingestor.unwrap_err();
     |

error[E0505]: cannot move out of `repo` because it is borrowed
   --> crates\shiplog-ingest-git\src\lib.rs:425:18
    |
366 |         let repo = Repository::init(dir.path())?;
    |             ---- binding `repo` declared here
...
378 |         let tree = repo.find_tree(tree_id)?;
    |                    ---- borrow of `repo` occurs here
...
425 |         Ok((dir, repo))
    |                  ^^^^ move out of `repo` occurs here
426 |     }
    |     - borrow might be used here, when `tree` is dropped and runs the `Drop` code for type `git2::Tree`

Some errors have detailed explanations: E0277, E0505.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `shiplog-ingest-git` (lib test) due to 2 previous errors
